<resources>
    <string name="app_name">Application2fou😲</string>
    <string name="hello">Salut :)</string>
    <string name="button">Cest un bouton</string>
    <string name="toto">SALUT TOTO \n</string>
    <string name="cat">salut petit chat</string>
    <string name="hello_cat">OUAIS OUAIS LE PETIT CHAT</string>
    <string name="title_activity_second">SecondActivity</string>
    <!--Boutons swap layout-->
    <string name="bouton_un">Basculer sur le layout2</string>
    <string name="bouton_deux">Basculer sur le layout1</string>
    <string name="swaplayout">menfou du petit chat!</string>
    <string name="bouton_tp6">Basculer sur le TP6</string>
    <string name="bouton_tp13">Basculer sur le TP13/TP16</string>
    <!--Elements du TP13-->
    <string name="tp13_bouton1">Démarrer la seconde activité (TP16)</string>
    <!--Elements du TP16-->
    <string name="tp16_bouton1">Partir du TP16</string>
    <string name="tp16_bouton2">Calculer</string>

    <string name="tp16_montant">Montant à emprunter : </string>
    <string name="tp16_interet">Intérêts (taux) : </string>
    <string name="tp16_mensualites">Nombre de mensualités : </string>
    <string name="tp16_resultat">Résultat : </string>





</resources>